# solwasmc

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  GRAMMAR_CHECKLIST.md  Makefile  README.md  testfile1.sol  testfile2.sol  testfile3.sol  testfile4.sol
src/: .gitignore  Makefile  assem_op_codes.rs  ast.rs  atom.rs  delimeter.rs  directive.rs  expr.rs  expression.rs  keyword.rs  lib.rs  literal.rs  pragma_directive.rs  primary_expr.rs  root.rs  sol.pest  solidity.lalrpop  statement.rs  token.rs
src/atom/: Makefile  mod.rs
src/atom/elementary_type_name/: generate.py
src/atom/keyword/: keywords.txt
src/atom/reserved/: .gitignore  generate.py
src/atom/storage_location/: generate.py  storage_locations.txt
src/definition/: Makefile  constructor.rs  mod.rs
src/definition/contract_part/: mod.rs
src/definition/contract_type/: generate.py  types.txt
src/delimeter/: delimeters.txt  generate.py
src/delimiter/: generate.py
src/elementary_type_name/: Makefile  elementary_type_names.txt  generate.py  mod.rs
src/elementary_type_name/uint/: generate.py  uints.txt
src/expression/: Makefile  function.rs  mod.rs  primary_expr.rs
src/expression/assignment/: Makefile  generate.py  operators.txt
src/keyword/: Makefile  generate.py  keywords.txt
src/lexer/: byte.rs  mod.rs  number_unit.rs  operator.rs  uint.rs
src/literal/: Makefile  mod.rs
src/literal/boolean/: generate.py
src/literal/number_unit/: generate.py  units.txt
src/op_codes/: codes.txt  generate.py
src/reserved/: reserved_words.txt
src/state_mutability/: generate.py  state_mutability_names.txt
src/statement/: assembly.rs  mod.rs
src/storage_location/: generate.py
src/visibility/: Makefile  generate.py  visibility.txt
