[package]
name = "solc-assem-wasm"
version = "0.1.0"
authors = ["Ryan Lee <drdgvhbh@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/drdgvhbh/solc-assem-wasm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.48"
logos = "0.9.7"
nom = "5.0.0"

[dev-dependencies]
pretty_assertions = "0.6.1"
itertools = "0.8.0"
