[package]
name = "solwasmc"
version = "0.1.1"
authors = ["Ryan Lee <drdgvhbh@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "web assembly compiler for solidity"
repository = "https://github.com/drdgvhbh/solwasmc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[build-dependencies]
lalrpop = "0.17.1"

[dependencies]
wasm-bindgen = "0.2.48"
logos = "0.9.7"
nom = "5.0.0"
console_error_panic_hook = "0.1.6"
lalrpop-util = "0.17.1"
regex = "0.2.1"
sha3 = "0.8.2"

[dev-dependencies]
pretty_assertions = "0.6.1"
itertools = "0.8.0"
